...
                  modifier = Modifier.size(200.dp).testTag("Look Up Logo"),
                  contentScale = ContentScale.Fit)

              // Home Button with Home Icon
              Button(
                  onClick = { navController.navigate("Menu") },
                  modifier = Modifier.padding(16.dp).size(64.dp).testTag("Home Icon"),
                  shape = MaterialTheme.shapes.small,
                  colors = ButtonDefaults.buttonColors(containerColor = Color.Gray),
              ) {
                Icon(
                    imageVector = Icons.Default.Home,
                    contentDescription = "Home Icon",
...
