...
  val isUserLoggedIn = user != null

  // Observing events from ViewModel.
  val icalEvents by calendarViewModel.icalEvents.collectAsState()

  Scaffold(
      modifier = Modifier.testTag("calendar_screen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { destination -> navigationActions.navigateTo(destination) },
            tabList = LIST_TOP_LEVEL_DESTINATION,
            isUserLoggedIn = isUserLoggedIn,
            selectedItem = Route.CALENDAR)
...
