...
            Log.e("SignInScreen", "Failed to sign in: ${it.statusCode}")
            Toast.makeText(context, "Login Failed!", Toast.LENGTH_LONG).show()
          })
  val token = stringResource(R.string.default_web_client_id)

  Scaffold(
      modifier = Modifier.fillMaxSize().testTag("auth_screen"),
      containerColor = PurpleBlue,
      topBar = {
        TopAppBar(
            title = {},
            navigationIcon = {
              IconButton(
...
